namespaces/archive/airport/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: main
spec:
  ports:
  - name: http
    port: 80
  - name: kafka
    port: 9092
  selector:
    app: main
