namespaces/archive/airport/ing.yml

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main
  annotations:
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  rules:
  - host: &hostname airport.lent.ink
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: main
            port:
              number: 80
  tls:
  - hosts:
    - *hostname
    secretName: airport-tls
